@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+ - Make ::Schema::Verifier aggregate errors instead of dying on first one
 
 2.030000  2015-07-01 10:11:42-07:00 America/Los_Angeles
  - Add ::Row::OnColumnMissing (Thanks ZipRecruiter!)
